# LLM-Home-Controller

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml  research.md  test.md
.devcontainer/: devcontainer.json
.devcontainer/ha-core/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: lint.yml  validate.yml
custom_components/llm_home_controller/: CLAUDE.md  __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  entity.py  manifest.json  memory.py  sensor.py  strings.json
custom_components/llm_home_controller/providers/: __init__.py  anthropic.py  openai.py  openai_responses.py
custom_components/llm_home_controller/translations/: en.json
scripts/: setup-ha-core.sh
tests/: CLAUDE.md  __init__.py  conftest.py  test_ai_task.py  test_config_flow.py  test_conversation.py  test_entity.py  test_init.py  test_memory.py  test_providers_anthropic.py  test_providers_init.py  test_providers_openai_responses.py  test_sensor.py
