[project]
name = "llm-home-controller"
version = "0.1.0"
description = "HomeAssistant Conversation Agent for OpenAI API-compatible LLM endpoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "homeassistant",
    "aiohttp",
    "voluptuous",
]

[dependency-groups]
dev = [
    "hassil>=3.0",
    "home-assistant-intents>=2026.2.3",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.llm_home_controller"]
